Cambiar la imagen de los botones y el título, se añaden los pngs para el titulo, el botón de jugar y el botón de salir.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Practica1_DADM</string>
     //Pantalla de título
-    <string name="pantallaTitulo">TRIVIA</string>
+    <string name="pantallaTitulo">SHONEN QUIZ</string>
     <string name="botonJugar">JUGAR</string>
     <string name="botonSalir">SALIR</string>
 
