Bocadillo de diálogo para las preguntas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     //Preguntas
     //Pregunta 1
-    <string name="pregunta1">¿Quién es el más poderoso entre estos personajes de Hunter x Hunter?</string>
+    <string name="pregunta1">ES FANÁTICA DE LO SENSUAL ELLA TIENE UNA FOTO MÍA Y YA ME LA PUEDO IMAGINAR LO QUE HACE CUANDO ESTÁ SOLITA</string>
 
     //Pregunta 2
     <string name="pregunta2">¿Quién es el lider del Shie Hassaikai de Boku No Hero Academia?</string>
